vlib/v/checker/tests/shared_variables_type_err.out
vlib/v/checker/tests/shared_variables_type_err.vv:9:9: error: missing `*` dereferencing `foo` in match statement
    7 |     shared foo := Foo.one
    8 |     rlock foo {
    9 |         match foo {
      |               ~~~
   10 |             .zero { println('0000') }
   11 |             .one { println('1111') }
