vlib/v/checker/tests/shared_variables_type_err.vv
enum Foo {
	zero
	one
}

fn main() {
	shared foo := Foo.one
	rlock foo {
		match foo {
			.zero { println('0000') }
			.one { println('1111') }
		}
	}
}
